# Shieldx

./: README.md  pyproject.toml
examples/: basic.py
shieldx/: __init__.py  runner.py  shield.py
shieldx/cli/: main.py  ui.py
shieldx/cli/commands/: __init__.py  run.py  validate.py  version.py
shieldx/config/: __init__.py  defaults.py  env.py  loader.py  settings.py
shieldx/exceptions/: __init__.py  errors.py
shieldx/llm/: __init__.py  base.py  ollama.py  openai.py
shieldx/models/: __init__.py  result.py
shieldx/prompt/: __init__.py  repair.py  schema.py  template.py
shieldx/retry/: __init__.py  engine.py
shieldx/schema/: __init__.py  contract.py
shieldx/utils/: __init__.py  json_utils.py  logging.py
shieldx/validators/: __init__.py  base.py  json.py  markdown.py  pii.py  refusal.py  text.py
