[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shieldx"
version = "0.1.0"
description = "ShieldX is a validation and safety framework for LLM applications."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Your Name" }
]

keywords = [
  "llm",
  "guardrails",
  "validation",
  "ai-safety",
  "structured-output",
  "openai"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "openai>=1.35.0",
  "rich>=13.7.1",
  "pyfiglet>=1.0.2",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[project.scripts]
shieldx = "shieldx.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourname/shieldx"
Repository = "https://github.com/yourname/shieldx"
Issues = "https://github.com/yourname/shieldx/issues"

[tool.setuptools.packages.find]
include = ["shieldx*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]